<resources>
    <string name="app_name">clap</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="Ingresar">Ingresar</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="registrar">Registrar</string>
    <string name="correo">Correo</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="crea_unacontrase_a">crea unaContraseña</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="car">car</string>
    <string name="settings">settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>