<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="343dp"
        android:layout_height="292dp"
        android:layout_centerHorizontal="true"
        android:foregroundGravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <EditText
        android:id="@+id/signupName"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/shadow_blue"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textColor="@color/shadow_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.426" />

    <EditText
        android:id="@+id/signupName2"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/shadow_blue"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="textPersonName"
        android:textColor="@color/shadow_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548" />

    <EditText
        android:id="@+id/signupEmail"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/shadow_blue"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="date|textWebEmailAddress"
        android:textColor="@color/shadow_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.667" />

    <EditText
        android:id="@+id/signupPassword"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/shadow_blue"
        android:ems="10"
        android:hint="Contraseña"
        android:inputType="textPassword"
        android:textColor="@color/shadow_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.792" />

    <Button
        android:id="@+id/registrar"
        android:layout_width="115dp"
        android:layout_height="40dp"
        android:background="@color/black"
        android:fontFamily="sans-serif"
        android:text="@string/registrar"
        android:textAllCaps="false"
        android:textColor="@color/platinum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903" />

</androidx.constraintlayout.widget.ConstraintLayout>